libgphoto2 (2.4.11-4) UNRELEASED; urgency=low

  * Acknowledge NMU.
  * Avoid -Wformat-security warnings, thanks to Kees Cook.

 -- David Paleino <dapal@debian.org>  Fri, 30 Dec 2011 00:50:18 +0100

libgphoto2 (2.4.11-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * Switch build depend from libjpeg62-dev to libjpeg-dev. (Closes: #635484)

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Sat, 10 Sep 2011 16:54:07 +0200

libgphoto2 (2.4.11-3) unstable; urgency=low

  * Add support for GD, by Build-Depending on libgd2-noxpm-dev
    (Closes: #609120)

 -- David Paleino <dapal@debian.org>  Sat, 30 Apr 2011 16:38:30 +0200

libgphoto2 (2.4.11-2) unstable; urgency=low

  * Fix usage of dpkg-maintscript-helper

 -- David Paleino <dapal@debian.org>  Mon, 18 Apr 2011 19:47:38 +0200

libgphoto2 (2.4.11-1) unstable; urgency=low

  [ David Paleino ]
  * New upstream release
    - Fix unset permissions with the generic PTP rule
      (Closes: #616648, #620941)
  * Fix README.Debian regarding the new udev rules location
    (Closes: #620937)
  * debian/libgphoto2-2.{preinst,postinst,postrm}: properly
    remove old configuration files using dpkg-maintscript-helper
    (Closes: #622569)
  * Patch 80_avchd_support.patch removed, merged upstream
  * Standards-Version bump to 3.9.2, no changes needed

  [ Andreas Metzler ]
  * Stop shipping libtool la files in development package.
    http://wiki.debian.org/ReleaseGoals/LAFileRemoval
    (Closes: #621619)

 -- David Paleino <dapal@debian.org>  Mon, 18 Apr 2011 19:11:01 +0200

libgphoto2 (2.4.10.1-5) unstable; urgency=low

  * Add missing package relationships for the package split
  * Install development documentation into more appropriate place
  * Merge libgphoto2-doc back into libgphoto2-2
  * Add a new libgphoto2-l10n package, recommended by libgphoto2-2,
    to move the localized messages in a Arch:all package
  * Rename libgphoto2-dev back to libgphoto2-2-dev: I'm not really