@@ -1,11 +1,16 @@
 usr/share/man/man3/libgphoto2.3
 usr/share/man/man3/libgphoto2_port.3
-usr/lib/libgphoto2_port.{so,a}
-usr/lib/libgphoto2_port/*/{serial,usb,disk,ptpip}.a
-usr/lib/libgphoto2.{so,a}
-usr/lib/pkgconfig/libgphoto2.pc
-usr/lib/pkgconfig/libgphoto2_port.pc
-usr/lib/libgphoto2/*/*.a
+usr/lib/*/libgphoto2_port.so
+usr/lib/*/libgphoto2_port.a
+usr/lib/*/libgphoto2_port/*/serial.a
+usr/lib/*/libgphoto2_port/*/usb.a
+usr/lib/*/libgphoto2_port/*/disk.a
+usr/lib/*/libgphoto2_port/*/ptpip.a
+usr/lib/*/libgphoto2.so
+usr/lib/*/libgphoto2.a
+usr/lib/*/pkgconfig/libgphoto2.pc
+usr/lib/*/pkgconfig/libgphoto2_port.pc
+usr/lib/*/libgphoto2/*/*.a
 usr/include/gphoto2/*.h
 usr/bin/gphoto2-port-config
 usr/bin/gphoto2-config
