@@ -4,6 +4,6 @@ usr/share/doc/libgphoto2/NEWS* usr/share/doc/libgphoto2-2
 usr/share/doc/libgphoto2/README usr/share/doc/libgphoto2-2
 usr/share/doc/libgphoto2/camlibs/ usr/share/doc/libgphoto2-2
 usr/share/libgphoto2/*/konica/*
-usr/lib/libgphoto2/*/*.so
-usr/lib/libgphoto2.so.*
-usr/lib/libgphoto2/print-camera-list
+usr/lib/*/libgphoto2/*/*.so
+usr/lib/*/libgphoto2.so.*
+usr/lib/*/libgphoto2/print-camera-list
