@@ -2,5 +2,5 @@ usr/share/locale/*/LC_MESSAGES/libgphoto2_port-0.mo
 usr/share/doc/libgphoto2_port/AUTHORS usr/share/doc/libgphoto2-port0
 usr/share/doc/libgphoto2_port/README  usr/share/doc/libgphoto2-port0
 usr/share/doc/libgphoto2_port/NEWS    usr/share/doc/libgphoto2-port0
-usr/lib/libgphoto2_port.so.*
-usr/lib/libgphoto2_port/*/*.so
+usr/lib/*/libgphoto2_port.so.*
+usr/lib/*/libgphoto2_port/*/*.so
