@@ -2,8 +2,10 @@ libgphoto2 (2.4.11-4) UNRELEASED; urgency=low
 
   * Acknowledge NMU.
   * Avoid -Wformat-security warnings, thanks to Kees Cook.
+  * Multi-Archified package, thanks to Kees Cook and Steve Langasek
+    (Closes: #653198)
 
- -- David Paleino <dapal@debian.org>  Fri, 30 Dec 2011 00:50:18 +0100
+ -- David Paleino <dapal@debian.org>  Fri, 30 Dec 2011 00:53:01 +0100
 
 libgphoto2 (2.4.11-3.1) unstable; urgency=low
 
